2011-09-22 Theodor Nolte <nolte_t@{,informatik.}haw-hamburg.de>

        * src/klickiBunti.py -> haw2iCalendar-klickiBunti.py
          src/haw2iCalendar.py -> haw2iCalendar.py: renamed

2011-09-22 Theodor Nolte <nolte_t@{,informatik.}haw-hamburg.de>

        * hawModel/hawParser.py,hawModel/hawParserTest.py: Adjusted to new
         formulations in the calendar-text file. This includes the '11 vs.
         2011/12' thing (SoSe vs. WiSe)

        * controller.py: Will no produce a logging info if there goes
         something wrong while parsing the calendar-text file.

        * hawModel/veranstaltungen/veranstaltungenDispatchProcessor.py,
         hawModel/veranstaltungen/veranstaltungenParser.py,
         hawModel/veranstaltungen/veranstaltungenParserTest.py:
         Adjusted to new veranstaltungen-names.

        * hawModel/testData/: Added some test data.

2011-07-31 Theodor Nolte <nolte_t@{,informatik.}haw-hamburg.de>

        * klickiBunti.py: wx.TreeCtrl and wx.StaticText will be feeded 
         now only with unicode-strings to show umlauts correct also on
         Windows.
         wx.TreeCtrl under Windows can't retreive the content of a
         'virtual root item' -- using another method instead
         (and I don't like wxpython).
        * haw2iCalendar-1.0.exe: new, executable binary for windows

2011-07-31 Theodor Nolte <nolte_t@{,informatik.}haw-hamburg.de>

        * About,Anleitung, symbolic link haw2iCalendar: removed
        * texts.py: new, Contains text from About and Anleitung
        * klickiBunti.py: Now uses texts.py instead of About and Anleitung.
         And also don't uses klickiBunti.xrc anymore. So 'pyinstaller' is
         feasable to create a single binary file containing all needed
         contents.

2011-07-26 Theodor Nolte <nolte_t@{,informatik.}haw-hamburg.de>

        * klickiBunti.{py,xrc}: new
          A real (wxpython) gui for mices.
        * controller.py(setOutfile,getInfoString,optimalGruppenKeyIndex): new,